<?xml version="1.0"?>
<package>
  <name>flyingcar_cartographer</name>
  <version>0.0.0</version>
  <description>Launch files and code for autonomous navigation of the flyingcar using Google Cartographer</description>
  <author email="abhattacharjee@clearpathrobotics.com">Aditya Bhattacharjee</author>
  <maintainer email="abhattacharjee@clearpathrobotics.com">Aditya Bhattacharjee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>


  <export>

  </export>
</package>
